[project]
name = "ComfyUI_Batch_from_CSV"
version = "1.1.0"
description = "Batch run ComfyUI workflows from a CSV file — prompts, reference images, video paths and shot names, one row per execution."
license = {text = "MIT"}

[project.urls]
Repository = "https://github.com/mdkberry/ComfyUI_Batch_from_CSV"
